# WikiBench

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  mkdocs.yml  pyproject.toml  step.md  wikibench.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: adapter_submission.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml
.wikibench-cache/: cache.db
.wikibench-results/d183e512-40f1-485a-a5e7-8bdd9d5d3e01/: report.md  result.json
Doc/: 00-项目概述与愿景.md  01-需求分析与用户画像.md  02-系统架构设计.md  03-数据集与语料库设计.md  04-评测任务与指标体系.md  05-评测接口与适配器规范.md  06-技术栈与工程规范.md  07-开发路线图与MVP计划.md  08-排行榜-社区与风险.md  09-语料爬取与论坛数据集.md  10-测试说明书.md  README.md
corpora/synthetic/tiny/: manifest.yaml
corpora/synthetic/tiny/docs/architecture/: overview.md
corpora/synthetic/tiny/docs/decisions/: 2026-01-db-choice.md  2026-02-grpc-adoption.md
corpora/synthetic/tiny/docs/onboarding/: incident-response.md  new-engineer-setup.md
corpora/synthetic/tiny/ground_truth/: contradictions.jsonl  fidelity_claims.jsonl  qa_pairs.jsonl
docs/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/planning/: 00-overview.md  01-requirements.md  02-architecture.md  03-datasets.md  04-tasks.md  05-adapter-interface.md  06-tech-stack.md  07-roadmap.md  08-leaderboard.md  09-crawlers.md
docs/reference/: adapter.md  cli.md  corpus.md
examples/: README.md
examples/01-corpus-verify/: README.md
examples/02-generate-synthetic/: README.md
examples/03-run-benchmark/: README.md
examples/04-results-sqlite-report/: README.md
scripts/: setup_llmwiki_sandbox.ps1  setup_llmwiki_sandbox.sh
src/wikibench/: __init__.py  __version__.py
src/wikibench/adapters/: __init__.py  _base.py  registry.py
src/wikibench/adapters/builtin/: naive.py  reference_wiki.py  simple_summary.py
src/wikibench/adapters/community/: __init__.py  llm_wiki_compiler.py  llm_wiki_sandbox.py  obsidian_wiki.py  query_prompt.py  sandbox.py
src/wikibench/cli/: corpus.py  main.py  report.py  run.py  verify.py
src/wikibench/corpora/: __main__.py  loader.py  manifest.py  packager.py
src/wikibench/corpora/annotators/: opinion_mapper.py  stance_clustering.py  temporal_shift.py
src/wikibench/corpora/crawlers/: base.py  hackernews.py  reddit.py  stackoverflow.py  v2ex.py
src/wikibench/corpora/renderers/: forum_renderer.py  transcript_renderer.py
src/wikibench/corpora/synthetic/: __init__.py  doc_writer.py  fact_sampler.py  generator.py  knowledge_graph.py  noise.py  pipeline.py  verifier.py
src/wikibench/corpora/synthetic/domains/: __init__.py  _base.py  (+2 more)
src/wikibench/judge/: base.py  default.py
src/wikibench/metrics/: __init__.py  _registry.py  efficiency.py  maintainability.py  quality.py
src/wikibench/metrics/aggregators/: composite.py  floor_constraints.py
src/wikibench/models/: __init__.py  corpus.py  document.py  query.py  result.py
src/wikibench/reporters/: __init__.py  console.py  json.py  markdown.py
src/wikibench/reporters/html/: __init__.py  renderer.py
src/wikibench/runner/: __init__.py  env.py  runner.py  scheduler.py
src/wikibench/runtime/: cache.py  cost.py  embed.py  llm.py  timeout.py  token_counter.py
src/wikibench/storage/: json_store.py  result_store.py  sqlite.py  store.py
src/wikibench/tasks/: __init__.py  contradiction_detection.py  grounding.py  incremental_update.py  knowledge_fidelity.py  opinion_synthesis.py  retrieval_accuracy.py  staleness_detection.py
src/wikibench/utils/: hashing.py  logging.py  text.py
tests/: conftest.py
tests/adapter_contract/: test_community_llmwiki.py  test_community_obsidian.py  test_contract.py
tests/e2e/: test_full_run.py
tests/integration/: test_corpus_loader.py  test_runner.py  test_tasks.py
tests/unit/: test_cache.py  test_corpus_models.py  test_cost.py  test_forum_renderer.py  test_hashing.py  test_llm.py  test_llm_wiki_sandbox.py  test_metrics.py  test_models.py  test_naive_adapter.py  test_reference_wiki_adapter.py  test_reporters.py  test_simple_summary_adapter.py  test_sqlite_store.py  test_synthetic_generator.py  test_token_counter.py  test_verify_cli.py  test_version.py
(+1 files in other folders)
