[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wikibench"
version = "0.1.0-alpha"
description = "Systematic evaluation infrastructure for LLM-maintained knowledge bases (LLM Wiki)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "WikiBench Contributors" }]
keywords = ["llm", "benchmark", "evaluation", "knowledge-base", "wiki"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13.7",
    "litellm>=1.40",
    "tiktoken>=0.7",
    "diskcache>=5.6",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "mkdocs-material>=9.5",
]
crawlers = [
    "scrapy>=2.11",
    "praw>=7.7",
    "lxml>=5.2",
]

[project.scripts]
wikibench = "wikibench.cli.main:app"

[project.entry-points."wikibench.adapters"]
naive = "wikibench.adapters.builtin.naive:NaiveAdapter"
simple_summary = "wikibench.adapters.builtin.simple_summary:SimpleSummaryAdapter"
reference_wiki = "wikibench.adapters.builtin.reference_wiki:ReferenceWikiAdapter"

[project.entry-points."wikibench.tasks"]
retrieval_accuracy = "wikibench.tasks.retrieval_accuracy:RetrievalAccuracyTask"
knowledge_fidelity = "wikibench.tasks.knowledge_fidelity:KnowledgeFidelityTask"
contradiction_detection = "wikibench.tasks.contradiction_detection:ContradictionDetectionTask"

[tool.hatch.build.targets.wheel]
packages = ["src/wikibench"]

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",              # isort
    "UP",             # pyupgrade
    "B",              # flake8-bugbear
    "C4",             # flake8-comprehensions
    "SIM",            # flake8-simplify
    "TCH",            # flake8-type-checking
    "ANN",            # flake8-annotations (partial)
    "RUF",            # ruff-specific
]
ignore = [
    "ANN101", "ANN102",   # self/cls type hints
    "ANN401",             # Any allowed in some places
    "E501",               # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
# Runtime imports required for corpus I/O; TCH wants TYPE_CHECKING-only imports.
"src/wikibench/corpora/synthetic/**/*.py" = ["TC001", "TC003"]

[tool.ruff.lint.isort]
known-first-party = ["wikibench"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
pretty = true
show_error_codes = true
# Core modules get strict; adapters and crawlers (external) are lenient
[[tool.mypy.overrides]]
module = ["litellm.*", "diskcache.*", "tiktoken.*", "scrapy.*", "praw.*"]
ignore_missing_imports = true

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q --tb=short"
markers = [
    "unit: fast, no I/O",
    "integration: may do local I/O but no LLM calls",
    "e2e: full pipeline, requires LLM credentials",
    "slow: takes > 30s",
]

# ── Coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src/wikibench"]
omit = ["*/tests/*", "*/crawlers/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70
